--- a/React-App/package.json
+++ b/React-App/package.json
@@ -17,10 +17,13 @@
     "@reduxjs/toolkit": "^2.6.1",
     "axios": "^1.8.3",
     "chart.js": "^4.4.8",
+    "file-saver": "^2.0.5",
     "js-cookie": "^3.0.5",
+    "konva": "^9.3.20",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
+    "react-konva": "^19.0.3",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.3.0",
     "redux": "^5.0.1",
